User login from DB TODO: Hash pass before in DB -> Need to create Sign in first